third_party/move/move-compiler-v2/tests/visibility-checker/inline_with_enums_01.exp

Diagnostics:
warning: pack on `m::Wrapper` can only be done within module `0xc0ffee::m`, but `m::use_me_not` could be called (and expanded) outside
  ┌─ tests/visibility-checker/inline_with_enums_01.move:6:23
  │
6 │     public inline fun use_me_not(): u64 {
  │                       ^^^^^^^^^^
7 │         let x = Wrapper::V1(22);
  │                 --------------- pack here

warning: field access on `m::Wrapper` can only be done within module `0xc0ffee::m`, but `m::use_me_not` could be called (and expanded) outside
  ┌─ tests/visibility-checker/inline_with_enums_01.move:6:23
  │
6 │     public inline fun use_me_not(): u64 {
  │                       ^^^^^^^^^^
7 │         let x = Wrapper::V1(22);
8 │         x.0
  │         --- field access here

error: Invalid operation: pack on `m::Wrapper` can only be done within module `0xc0ffee::m`
   ┌─ tests/visibility-checker/inline_with_enums_01.move:15:9
   │
 7 │         let x = Wrapper::V1(22);
   │                 --------------- pack here
   ·
15 │     fun test(): u64 {
   │         ^^^^
16 │         m::use_me_not()
   │         --------------- from a call inlined at this callsite

error: Invalid operation: field access on `m::Wrapper` can only be done within module `0xc0ffee::m`
   ┌─ tests/visibility-checker/inline_with_enums_01.move:15:9
   │
 8 │         x.0
   │         --- field access here
   ·
15 │     fun test(): u64 {
   │         ^^^^
16 │         m::use_me_not()
   │         --------------- from a call inlined at this callsite
